--- a/public/index.css
+++ b/public/index.css
@@ -39,3 +39,397 @@ body {
 	box-shadow: 0 0 2px 2px #CF7D7D;
 	outline: 0;
 }
+/* todo-header styles */
+todo-header .new-todo {
+	position: relative;
+	margin: 0;
+	width: 100%;
+	font-size: 24px;
+	font-family: inherit;
+	font-weight: inherit;
+	line-height: 1.4em;
+	color: inherit;
+	padding: 6px;
+	border: 1px solid #999;
+	box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
+	box-sizing: border-box;
+}
+
+todo-header .new-todo {
+	padding: 16px 16px 16px 60px;
+	height: 65px;
+	border: none;
+	background: rgba(0, 0, 0, 0.003);
+	box-shadow: inset 0 -2px 1px rgba(0,0,0,0.03);
+}
+
+todo-header h1 {
+	position: absolute;
+	top: -140px;
+	width: 100%;
+	font-size: 80px;
+	font-weight: 200;
+	text-align: center;
+	color: #b83f45;
+	text-rendering: optimizeLegibility;
+}
+
+/* todo-item styles */
+todo-item .view {
+  display:grid;
+  grid-direction:row;
+  grid-template-columns: 1fr 50px;
+}
+todo-item form.update-todo {
+  display:grid;
+  grid-direction:row;
+  grid-template-columns: 50px 1fr;
+}
+todo-item input.edit[name=task] {
+  border: none;
+  box-shadow: none;
+}
+todo-item button.destroy{
+  display: block;
+}
+todo-item form .destroy:after {
+  position: absolute;
+  transform: translate(-50%, -50%);
+}
+todo-item .edit {
+	position: relative;
+	margin: 0;
+	width: 100%;
+	font-size: 24px;
+	font-family: inherit;
+	font-weight: inherit;
+	line-height: 1.4em;
+	color: inherit;
+	padding: 6px;
+	border: 1px solid #999;
+	box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
+	box-sizing: border-box;
+}
+todo-item .view:focus-within {
+	box-shadow: 0 0 2px 2px #CF7D7D;
+	outline: 0;
+
+}
+
+/* todo-list styles */
+
+todo-list .todo-list li .toggle + button {
+      background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23949494%22%20stroke-width%3D%223%22/%3E%3C/svg%3E');
+      background-repeat: no-repeat;
+      background-position: center left;
+    }
+todo-list .todo-list li .toggle:checked + button {
+      background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%2359A193%22%20stroke-width%3D%223%22%2F%3E%3Cpath%20fill%3D%22%233EA390%22%20d%3D%22M72%2025L42%2071%2027%2056l-4%204%2020%2020%2034-52z%22%2F%3E%3C%2Fsvg%3E');
+    }
+todo-list .todo-list li button {
+      overflow-wrap: break-word;
+      padding: 15px 15px 15px 60px;
+      display: block;
+      line-height: 1.2;
+      transition: color 0.4s;
+      font-weight: 400;
+      color: #484848;
+    }
+ todo-list    button.edit-task.edit-task {
+      display: none;
+    }
+
+
+
+
+todo-list .main {
+	position: relative;
+	z-index: 2;
+	border-top: 1px solid #e6e6e6;
+}
+
+todo-list .toggle-all {
+	width: 1px;
+	height: 1px;
+	border: none; /* Mobile Safari */
+	opacity: 0;
+	position: absolute;
+	right: 100%;
+	bottom: 100%;
+}
+
+todo-list .toggle-all + label {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 45px;
+	height: 65px;
+	font-size: 0;
+	position: absolute;
+	top: -65px;
+	left: -0;
+}
+
+todo-list .toggle-all + label:before {
+	content: '❯';
+	display: inline-block;
+	font-size: 22px;
+	color: #949494;
+	padding: 10px 27px 10px 27px;
+	-webkit-transform: rotate(90deg);
+	transform: rotate(90deg);
+}
+
+todo-list .toggle-all:checked + label:before {
+	color: #484848;
+}
+
+todo-list .todo-list {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+
+todo-list .todo-list li {
+	position: relative;
+	font-size: 24px;
+	border-bottom: 1px solid #ededed;
+}
+
+todo-list .todo-list li:last-child {
+	border-bottom: none;
+}
+
+todo-list .todo-list li.editing {
+	border-bottom: none;
+	padding: 0;
+}
+
+todo-list .todo-list li.editing .edit {
+	display: block;
+	width: calc(100% - 43px);
+	padding: 12px 16px;
+	margin: 0 0 0 43px;
+}
+
+
+todo-list .todo-list li .toggle {
+	text-align: center;
+	width: 40px;
+	/* auto, since non-WebKit browsers doesn't support input styling */
+	height: auto;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	margin: auto 0;
+	border: none; /* Mobile Safari */
+	-webkit-appearance: none;
+	appearance: none;
+}
+
+todo-list .todo-list li .toggle {
+	opacity: 0;
+}
+
+todo-list .todo-list li .toggle + label {
+	background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23949494%22%20stroke-width%3D%223%22/%3E%3C/svg%3E');
+	background-repeat: no-repeat;
+	background-position: center left;
+}
+
+todo-list .todo-list li .toggle:checked + label {
+	background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%2359A193%22%20stroke-width%3D%223%22%2F%3E%3Cpath%20fill%3D%22%233EA390%22%20d%3D%22M72%2025L42%2071%2027%2056l-4%204%2020%2020%2034-52z%22%2F%3E%3C%2Fsvg%3E');
+}
+
+todo-list .todo-list li label {
+	overflow-wrap: break-word;
+	padding: 15px 15px 15px 60px;
+	display: block;
+	line-height: 1.2;
+	transition: color 0.4s;
+	font-weight: 400;
+	color: #484848;
+}
+
+todo-list .todo-list li.completed label {
+	color: #949494;
+	text-decoration: line-through;
+}
+
+todo-list .todo-list li .destroy {
+	/* display: none; */
+	position: absolute;
+	top: 0;
+	right: 10px;
+	bottom: 0;
+	width: 40px;
+	height: 40px;
+	margin: auto 0;
+	font-size: 30px;
+	color: #949494;
+	transition: color 0.2s ease-out;
+}
+
+todo-list .todo-list li .destroy:hover,
+todo-list .todo-list li .destroy:focus {
+	color: #C18585;
+}
+
+todo-list .todo-list li .destroy:after {
+	content: '×';
+	display: block;
+	height: 100%;
+	line-height: 1.1;
+}
+
+todo-list .todo-list li:hover .destroy {
+	display: block;
+}
+
+
+todo-list .todo-list li.editing:last-child {
+	margin-bottom: -1px;
+}
+
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+todo-list	.toggle-all,
+todo-list	.todo-list li .toggle {
+		background: none;
+	}
+
+todo-list	.todo-list li .toggle {
+		height: 40px;
+	}
+}
+
+@media (max-width: 430px) {
+todo-list	.footer {
+		height: 50px;
+	}
+
+todo-list	.filters {
+		bottom: 10px;
+	}
+}
+
+todo-list .toggle-all:focus + label {
+	box-shadow: 0 0 2px 2px #CF7D7D;
+	outline: 0;
+}
+
+/* todo-app-footer styles */
+todo-app-footer .info {
+	margin: 65px auto 0;
+	color: #4d4d4d;
+	font-size: 11px;
+	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+	text-align: center;
+}
+
+todo-app-footer .info p {
+	line-height: 1;
+}
+
+todo-app-footer .info a {
+	color: inherit;
+	text-decoration: none;
+	font-weight: 400;
+}
+
+todo-app-footer .info a:hover {
+	text-decoration: underline;
+}
+
+/* todo-app styles */
+todo-app section.todoapp {
+	background: #fff;
+	margin: 130px 0 40px 0;
+	position: relative;
+	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
+	            0 25px 50px 0 rgba(0, 0, 0, 0.1);
+}
+
+todo-app input::placeholder {
+	font-style: italic;
+	font-weight: 400;
+	color: rgba(0, 0, 0, 0.4);
+}
+
+
+/* todo-footer styles */ 
+
+todo-footer footer.footer {
+	padding: 10px 15px;
+	height: 20px;
+	text-align: center;
+	font-size: 15px;
+	border-top: 1px solid #e6e6e6;
+}
+
+todo-footer footer.footer:before {
+	content: '';
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	height: 50px;
+	overflow: hidden;
+	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2),
+	            0 8px 0 -3px #f6f6f6,
+	            0 9px 1px -3px rgba(0, 0, 0, 0.2),
+	            0 16px 0 -6px #f6f6f6,
+	            0 17px 2px -6px rgba(0, 0, 0, 0.2);
+}
+
+
+todo-footer .todo-count {
+	float: left;
+	text-align: left;
+}
+
+todo-footer .todo-count strong {
+	font-weight: 300;
+}
+
+todo-footer .filters {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	position: absolute;
+	right: 0;
+	left: 0;
+}
+
+todo-footer .filters li {
+	display: inline;
+}
+
+todo-footer .filters li a {
+	color: inherit;
+	margin: 3px;
+	padding: 3px 7px;
+	text-decoration: none;
+	border: 1px solid transparent;
+	border-radius: 3px;
+}
+
+todo-footer .filters li a:hover {
+	border-color: #DB7676;
+}
+
+todo-footer .filters li a.selected {
+	border-color: #CE4646;
+}
+
+todo-footer .clear-completed,
+html .clear-completed:active {
+	float: right;
+	position: relative;
+	line-height: 19px;
+	text-decoration: none;
+	cursor: pointer;
+}
+
+todo-footer .clear-completed:hover {
+	text-decoration: underline;
+}
